--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">MyMusic</string>
     <string name="start">开始</string>
+    <string name="pause">暂停</string>
+    <string name="play">播放</string>
 </resources>
