--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="start">开始</string>
     <string name="pause">暂停</string>
     <string name="play">播放</string>
+    <string name="stop">停止</string>
 </resources>
