--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="pause">暂停</string>
     <string name="play">播放</string>
     <string name="stop">停止</string>
+    <string name="seek">Seek</string>
 </resources>
